Fixed issue with borders by collapsing them in the table and recolouring the outlines of the border wrapper. Also moved Undo/Redo buttons for time being but may move them back

--- a/interface/src/components/input/input.css
+++ b/interface/src/components/input/input.css
@@ -21,10 +21,12 @@
 .input.playerone {
     background-color: #ED7728;
     color: white;
+    outline: 1px solid #FE9241;
 }
 
 .input.playertwo {
     background-color: #42A7F4;
     color: white;
+    outline: 1px solid #0273EB;
 }
     
