--- a/interface/src/components/keypad/keypad.css
+++ b/interface/src/components/keypad/keypad.css
@@ -1,15 +1,25 @@
 table {
     width: 100%;
     height: 66vh;
+    border-collapse: collapse;
 }
 
 td {
     width: 25%;
     height: 11vh;
+    padding: 0;
 }
 
 td.double {
     min-height: 100%;
+}
+
+td.playerone {
+    background-color: #FE9241;
+}
+
+td.playertwo {
+    background-color: #42A7F4;
 }
 
 
