--- a/interface/src/components/player/player.css
+++ b/interface/src/components/player/player.css
@@ -1,6 +1,6 @@
 .player {
     width: 50%;
-    height: 33vh;
+    height: 30vh;
     float: left;
 }
 
